--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -613,3 +613,26 @@ html, body {
   color: #6b7280;
   font-style: italic;
 }
+
+.login-btn {
+  display: flex;
+  align-items: center;
+  gap: 8px; /* espacio entre icono y texto */
+  padding: 10px 16px;
+  background-color: #1756af; /* gris oscuro */
+  color: white;
+  font-weight: 500;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(5, 140, 250, 0.781);
+  cursor: pointer;
+  transition: background 0.2s ease-in-out, transform 0.1s;
+}
+
+.login-btn:hover {
+  background-color: #0b3692; /* un poco más oscuro al hover */
+}
+
+.login-btn:active {
+  transform: scale(0.97); /* pequeño "click" al presionar */
+}
