--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -679,3 +679,8 @@ html, body {
     font-weight: 600; 
     border-bottom: 2px solid #1d4ed8;
 }
+/* En tu archivo .css o módulo de estilos */
+.navbar-icon {
+  /* margin-right: 12px es equivalente a mr-3 */
+  margin-right: 9px; 
+}
